--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
     <i class="far fa-calendar"></i> 21 décembre 2025
   </div>
   <div class="date-info">
+<i class="fas fa-clock"></i> 17h30 – 21h
+</div>
+  <div class="date-info">
     <i class="fas fa-location-dot"></i> Nanawax La Maison
   </div>
 </header>
