--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
   <p class="subtitle">by Nanawax La Maison</p>
 
   <div class="date-info">
-    <i class="far fa-calendar"></i> 21 décembre 2025
+    <i class="far fa-calendar"></i> Dimanche 21 décembre 2025
   </div>
   <div class="date-info">
 <i class="fas fa-clock"></i> 17h30 – 21h
@@ -224,7 +224,7 @@
 emailjs.init("13uhnx4ywp64w0KDy");
 
 const sizes=['XS','S','M','L','XL','2XL','3XL','4XL'];
-const colors=['Blanc','Noir','Vert','Bleu','Marron','Saumon','Violet','Jaune'];
+const colors=['Blanc','Noir','Vert','Bleu','Marron','Saumon','Violet','Jaune','Rouge','Rose','Orange','Beige'];
 
 let selectedSize='', selectedColor='';
 
